--- a/singolo1.html
+++ b/singolo1.html
@@ -4,10 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="singolo1.css">
-  <title>singolo1</title>
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
+        crossorigin="anonymous" />
+  <link rel="stylesheet" href="singolo1.css" />
+  <title>Singolo</title>
 </head>
+
 <body>
+
+  <header>
+
+    <div class="wrapper-header">
+
+      <h1 class="logo-header">
+        <a href="#">
+          Singolo
+        </a>
+      </h1>
   
+      <nav>
+        <ul class="navbar-header">
+          <li class="navbar-header__item"><a href="#">Home</a></li>
+          <li class="navbar-header__item"><a href="#">Services</a></li>
+          <li class="navbar-header__item"><a href="#">Portfolio</a></li>
+          <li class="navbar-header__item"><a href="#">About</a></li>
+          <li class="navbar-header__item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+
+    </div>
+
+  </header>
+
+  <main>
+
+    <section class="section-slider">
+    </section>
+
+    <section class="section-services">
+    </section>
+    
+    <section class="section-portfolio">
+    </section>
+
+    <section class="section-aboutUs">
+    </section>
+
+    <section class="section-quote">
+    </section>
+
+  </main>
+
+  <footer>
+  </footer>
+
 </body>
+
 </html>
