feat: add services section

--- a/singolo1.html
+++ b/singolo1.html
@@ -63,10 +63,51 @@
         <p class="services__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 
         <ul class="services-list">
+
           <li class="services-list__item">
-            <img class="services-tile__icon" src="./assets/images/pen.svg" alt="media">
-            <h3 class="services-tile__title">Custom design</h3>
-            <p class="services-tile__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+            <div class="services-tile__icon pen-icon"></div>
+            <div class="services-tile__body">
+              <h3>Custom design</h3>
+              <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+            </div>
+          </li>
+
+          <li class="services-list__item">
+            <div class="services-tile__icon bulb-icon"></div>
+            <div class="services-tile__body">
+              <h3>Inovative ideas</h3>
+              <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+            </div>
+          </li>
+
+          <li class="services-list__item">
+            <div class="services-tile__icon heart-icon"></div>
+            <div class="services-tile__body">
+              <h3>Love is the answer</h3>
+              <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+            </div>
+
+          <li class="services-list__item">
+            <div class="services-tile__icon phone-icon"></div>
+            <div class="services-tile__body">
+              <h3>Responsive layout</h3>
+              <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+            </div>
+          </li>
+
+          <li class="services-list__item">
+            <div class="services-tile__icon bubble-icon"></div>
+            <div class="services-tile__body">
+              <h3>24 / 7 support</h3>
+              <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
+            </div>
+
+          <li class="services-list__item">
+            <div class="services-tile__icon star-icon"></div>
+            <div class="services-tile__body">
+              <h3>Feel like a star</h3>
+              <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+            </div>
           </li>
 
         </ul>
