feat: add portfolio section in html and css

--- a/singolo1.html
+++ b/singolo1.html
@@ -16,7 +16,7 @@
 <body>
 
   <header class="header">
-    <div class="wrapper-header">
+    <div class="wrapper">
 
       <h1 class="logo-header">
         <a href="#">Singolo</a>
@@ -37,26 +37,26 @@
 
   <main>
 
-    <section class="section-slider">
-      <div class="wrapper-slider">
+    <div class="section-slider">
+      <div class="wrapper">
 
         <button class="slider-btn slider-btn--left"></button>
         <button class="slider-btn slider-btn--right"></button>
 
         <ul class="slider-list">
           <li class="slider-list__item">
-            <img src="./assets/images/phone-vertical.png" alt="foto">
+            <img src="./assets/images/phone-vertical.png" alt="Vertical phone">
           </li>
           <li class="slider-list__item">
-            <img src="./assets/images/phone-horizontal.png" alt="foto">
+            <img src="./assets/images/phone-horizontal.png" alt="Horizontal phone">
           </li>
         </ul>
 
       </div>
-    </section>
+    </div>
 
     <section class="section-services">
-      <div class="wrapper-services">
+      <div class="wrapper">
 
         <h2 class="services__title">Our services</h2>
 
@@ -116,6 +116,35 @@
     </section>
     
     <section class="section-portfolio">
+      <div class="wrapper">
+        
+        <h2 class="portfolio__title">Portfolio</h2>
+  
+        <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+  
+        <ul class="images-set-list">
+          <li class="images-set-list__item"><button>All</button></li>
+          <li class="images-set-list__item"><button>Web design</button></li>
+          <li class="images-set-list__item"><button>Graphic design</button></li>
+          <li class="images-set-list__item"><button>Artwork</button></li>
+        </ul>
+  
+        <ul class="images-list">
+          <li class="images-list__item"><img class="img-01" src="./assets/images/image-01.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-02" src="./assets/images/image-02.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-03" src="./assets/images/image-03.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-04" src="./assets/images/image-04.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-05" src="./assets/images/image-05.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-06" src="./assets/images/image-06.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-07" src="./assets/images/image-07.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-08" src="./assets/images/image-08.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-09" src="./assets/images/image-09.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-10" src="./assets/images/image-10.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-11" src="./assets/images/image-11.png" alt="image"></li>
+          <li class="images-list__item"><img class="img-12" src="./assets/images/image-12.png" alt="image"></li>
+        </ul>
+
+      </div>
     </section>
 
     <section class="section-aboutUs">
