feat: add about us section

--- a/singolo1.html
+++ b/singolo1.html
@@ -19,16 +19,16 @@
     <div class="wrapper">
 
       <h1 class="logo-header">
-        <a href="#">Singolo</a>
+        <a href="#!">Singolo</a>
       </h1>
-  
+
       <nav>
         <ul class="navbar-header">
-          <li class="navbar-header__item"><a href="#">Home</a></li>
-          <li class="navbar-header__item"><a href="#">Services</a></li>
-          <li class="navbar-header__item"><a href="#">Portfolio</a></li>
-          <li class="navbar-header__item"><a href="#">About</a></li>
-          <li class="navbar-header__item"><a href="#">Contact</a></li>
+          <li class="navbar-header__item"><a href="#!">Home</a></li>
+          <li class="navbar-header__item"><a href="#!">Services</a></li>
+          <li class="navbar-header__item"><a href="#!">Portfolio</a></li>
+          <li class="navbar-header__item"><a href="#!">About</a></li>
+          <li class="navbar-header__item"><a href="#!">Contact</a></li>
         </ul>
       </nav>
 
@@ -148,6 +148,53 @@
     </section>
 
     <section class="section-aboutUs">
+      <div class="wrapper">
+
+        <h2 class="aboutUs__title">About us</h2>
+
+        <p class="aboutUs__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+
+        <ul class="employees-list">
+
+          <li class="employees-list__item">
+            <img src="./assets/images/photo-01.png" alt="Adam Jensen">
+            <h3>Adam Jensen</h3>
+            <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+            <ul class="media-tab-list">
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+            </ul>
+          </li>
+
+          <li class="employees-list__item">
+            <img src="./assets/images/photo-02.png" alt="Desmond Miles">
+            <h3>Desmond Miles</h3>
+            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+            <ul class="media-tab-list">
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+            </ul>
+          </li>
+
+          <li class="employees-list__item">
+            <img src="./assets/images/photo-03.png" alt="Scolara Visari">
+            <h3>Scolara Visari</h3>
+            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+            <ul class="media-tab-list">
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+            </ul>
+          </li>
+
+        </ul>
+
+      </div>
     </section>
 
     <section class="section-quote">
