style: correct markup (singolo 1) and css for pixel perfect

--- a/singolo1.html
+++ b/singolo1.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-  <!-- <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
-        crossorigin="anonymous" /> -->
   <link rel="stylesheet" href="singolo1.css" />
   <title>Singolo</title>
 </head>
@@ -64,34 +60,34 @@
 
         <p class="services__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 
-        <ul class="3-column-layout services__list">
+        <ul class="layout-3-column services__list services__list--perfectPixel">
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--pen-icon">
             <h3 class="services-tile__title">Custom design</h3>
             <p class="services-tile__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
           </li>
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--bulb-icon">
             <h3 class="services-tile__title">Inovative ideas</h3>
             <p class="services-tile__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
           </li>
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--heart-icon">
             <h3 class="services-tile__title">Love is the answer</h3>
             <p class="services-tile__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
           </li>
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--phone-icon">
             <h3 class="services-tile__title">Responsive layout</h3>
             <p class="services-tile__text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
           </li>
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--bubble-icon">
             <h3 class="services-tile__title">24 / 7 support</h3>
             <p class="services-tile__text">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem.</p>
           </li>
 
-          <li class="3-column-layout__item services-tile">
+          <li class="layout-3-column__item services-tile services-tile--star-icon">
             <h3 class="services-tile__title">Feel like a star</h3>
             <p class="services-tile__text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
           </li>
