style: correct img (in absolute position) in slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -42,10 +42,18 @@
   
           <ul class="slider-list">
             <li class="slider-list__item">
-              <img src="./assets/images/phone-vertical.png" alt="Vertical phone">
+              <div class="iphone-vertical">
+                <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
+                <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
+                <img class="iphone__screen" src="./assets/images/iphone-vertical-screen.png" alt="Vertical phone">
+              </div>
             </li>
             <li class="slider-list__item">
-              <img src="./assets/images/phone-horizontal.png" alt="Horizontal phone">
+              <div class="iphone-horizontal">
+                <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Horizontal phone">
+                <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Horizontal phone">
+                <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone">
+              </div>
             </li>
           </ul>
         </div>
