style: add description in links with background-images

--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
       <div class="wrapper">
 
         <div class="slider__wrapper">
-          <button class="button slider__button slider__button--left slider__button--perfectPixel"></button>
-          <button class="button slider__button slider__button--right"></button>
+          <button class="slider__button slider__button--left slider__button--perfectPixel"></button>
+          <button class="slider__button slider__button--right"></button>
   
           <ul class="slider-list">
             <li class="slider-list__item">
               <div class="iphone-vertical">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Vertical phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Vertical phone">
-                <img class="iphone__screen" src="./assets/images/iphone-vertical-screen.png" alt="Vertical phone">
+                <img class="iphone__screen" src="./assets/images/iphone-vertical-screen.png" alt="Vertical phone screen content">
               </div>
             </li>
             <li class="slider-list__item">
               <div class="iphone-horizontal">
                 <img class="iphone__shadow" src="./assets/images/iphone-shadow.png" alt="Horizontal phone">
                 <img class="iphone__base" src="./assets/images/iphone-base.png" alt="Horizontal phone">
-                <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone">
+                <img class="iphone__screen" src="./assets/images/iphone-horizontal-screen.png" alt="Horizontal phone screen content">
               </div>
             </li>
           </ul>
@@ -120,18 +120,54 @@
         </ul>
   
         <ul class="portfolio__images images-list">
-          <li class="images-list__item"><img class="img-01" src="./assets/images/image-01.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-02" src="./assets/images/image-02.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-03" src="./assets/images/image-03.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-04" src="./assets/images/image-04.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-05" src="./assets/images/image-05.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-06" src="./assets/images/image-06.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-07" src="./assets/images/image-07.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-08" src="./assets/images/image-08.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-09" src="./assets/images/image-09.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-10" src="./assets/images/image-10.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-11" src="./assets/images/image-11.png" alt="image"></li>
-          <li class="images-list__item"><img class="img-12" src="./assets/images/image-12.png" alt="image"></li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 1
+              <img class="img-01" src="./assets/images/image-01.png" alt="portfolio image 1"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 2
+              <img class="img-02" src="./assets/images/image-02.png" alt="portfolio image 2"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 3
+              <img class="img-03" src="./assets/images/image-03.png" alt="portfolio image 3"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 4
+              <img class="img-04" src="./assets/images/image-04.png" alt="portfolio image 4"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 5
+              <img class="img-05" src="./assets/images/image-05.png" alt="portfolio image 5"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 6
+              <img class="img-06" src="./assets/images/image-06.png" alt="portfolio image 6"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 7
+              <img class="img-07" src="./assets/images/image-07.png" alt="portfolio image 7"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 8
+              <img class="img-08" src="./assets/images/image-08.png" alt="portfolio image 8"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 9
+              <img class="img-09" src="./assets/images/image-09.png" alt="portfolio image 9"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 10
+              <img class="img-10" src="./assets/images/image-10.png" alt="portfolio image 10"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 11
+              <img class="img-11" src="./assets/images/image-11.png" alt="portfolio image 11"></a>
+          </li>
+          <li class="images-list__item">
+            <a href="#!">Link to portfolio image 12
+              <img class="img-12" src="./assets/images/image-12.png" alt="portfolio image 12"></a>
+          </li>
         </ul>
 
       </div>
@@ -151,10 +187,10 @@
             <h3>Adam Jensen</h3>
             <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
             <ul class="media-tab-list perfect-pixel">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -163,10 +199,10 @@
             <h3>Desmond Miles</h3>
             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
             <ul class="media-tab-list">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -175,10 +211,10 @@
             <h3>Scolara Visari</h3>
             <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
             <ul class="media-tab-list">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -203,6 +239,8 @@
               type="text"
               form="quote-form"
               required
+              pattern="[a-zA-Z-]+"
+              title="Enter your name"
               placeholder="Name (Required)">
 
             <input
@@ -210,6 +248,7 @@
               type="email"
               form="quote-form"
               required
+              title="Enter your email in format: <username>@<domain>"
               placeholder="Email (Required)">
 
             <input
@@ -266,10 +305,10 @@
       <p class="footer__text">© Copyright 2013 · by PSDchat.com</p>
 
       <ul class="media-tab-list">
-        <li class="media-tab-list__item"><a class="tab-facebook" href="#!"></a></li>
-        <li class="media-tab-list__item"><a class="tab-google" href="#!"></a></li>
-        <li class="media-tab-list__item"><a class="tab-twitter" href="#!"></a></li>
-        <li class="media-tab-list__item"><a class="tab-linkedin" href="#!"></a></li>
+        <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
+        <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
+        <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
+        <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
       </ul>
   
     </div>
