style: add links to sections in navbar anchors

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <nav>
         <ul class="navbar header__navbar">
           <li class="navbar__item navbar__item--active"><a href="#!">Home</a></li>
-          <li class="navbar__item"><a href="#!">Services</a></li>
-          <li class="navbar__item"><a href="#!">Portfolio</a></li>
-          <li class="navbar__item"><a href="#!">About</a></li>
-          <li class="navbar__item"><a href="#!">Contact</a></li>
+          <li class="navbar__item"><a href="#services">Services</a></li>
+          <li class="navbar__item"><a href="#portfolio">Portfolio</a></li>
+          <li class="navbar__item"><a href="#aboutUs">About</a></li>
+          <li class="navbar__item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
 
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <section class="services">
+    <section id="services" class="services">
       <div class="wrapper">
 
         <h2 class="services__title">Our services</h2>
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <section class="portfolio">
+    <section id="portfolio" class="portfolio">
       <div class="wrapper">
         
         <h2 class="portfolio__title">Portfolio</h2>
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <section class="aboutUs">
+    <section id="aboutUs" class="aboutUs">
       <div class="wrapper">
 
         <h2 class="aboutUs__title">About us</h2>
@@ -223,7 +223,7 @@
       </div>
     </section>
 
-    <section class="quote">
+    <section id="contact" class="quote">
       <div class="wrapper">
 
         <h2 class="quote__title">Get <span class="pixel-perfect">a</span> Quote</h2>
