style: replace png with svg in icons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p class="services-tile__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
           </li>
 
-          <li class="layout-3-column__item services-tile services-tile--phone-icon">
+          <li class="layout-3-column__item services-tile services-tile--mobile-icon">
             <h3 class="services-tile__title">Responsive layout</h3>
             <p class="services-tile__text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
           </li>
@@ -187,10 +187,10 @@
             <h3>Adam Jensen</h3>
             <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
             <ul class="media-tab-list perfect-pixel">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -199,10 +199,10 @@
             <h3>Desmond Miles</h3>
             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
             <ul class="media-tab-list">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -211,10 +211,10 @@
             <h3>Scolara Visari</h3>
             <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
             <ul class="media-tab-list">
-              <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
-              <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
-              <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
-              <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--facebook" href="#!">Link to Facebook</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--google" href="#!">Link to Google</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--twitter" href="#!">Link to Twitter</a></li>
+              <li class="media-tab-list__item"><a class="social-tab social-tab--linkedin" href="#!">Link to Linkedin</a></li>
             </ul>
           </li>
 
@@ -239,7 +239,6 @@
               type="text"
               form="quote-form"
               required
-              pattern="[a-zA-Z-]+"
               title="Enter your name"
               placeholder="Name (Required)">
 
@@ -278,15 +277,15 @@
 
             <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
             
-            <ul class="contact-tab-list">
-              <li class="contact-tab-list__item">
-                <a href="#!" class="location-contact-icon">Elm St. 14/05 Lost City</a>
+            <ul class="contact-list">
+              <li class="contact-list__item">
+                <a href="#!" class="contact__item contact__item--location">Elm St. 14/05 Lost City</a>
               </li>
-              <li class="contact-tab-list__item">
-                <a href="tel:035283318635" class="phone-contact-icon">03528 331 86 35</a>
+              <li class="contact-list__item">
+                <a href="tel:035283318635" class="contact__item contact__item--phone">03528 331 86 35</a>
               </li>
-              <li class="contact-tab-list__item">
-                <a href="mailto:info@singolo.com" class="mail-contact-icon pixel-perfect">info@singolo.com</a>
+              <li class="contact-list__item">
+                <a href="mailto:info@singolo.com" class="contact__item contact__item--mail pixel-perfect">info@singolo.com</a>
               </li>
             </ul>
 
@@ -305,10 +304,10 @@
       <p class="footer__text">© Copyright 2013 · by PSDchat.com</p>
 
       <ul class="media-tab-list">
-        <li class="media-tab-list__item"><a class="tab-facebook" href="#!">Link to Facebook</a></li>
-        <li class="media-tab-list__item"><a class="tab-google" href="#!">Link to Google</a></li>
-        <li class="media-tab-list__item"><a class="tab-twitter" href="#!">Link to Twitter</a></li>
-        <li class="media-tab-list__item"><a class="tab-linkedin" href="#!">Link to Linkedin</a></li>
+        <li class="media-tab-list__item"><a class="social-tab social-tab--facebook" href="#!">Link to Facebook</a></li>
+        <li class="media-tab-list__item"><a class="social-tab social-tab--google" href="#!">Link to Google</a></li>
+        <li class="media-tab-list__item"><a class="social-tab social-tab--twitter" href="#!">Link to Twitter</a></li>
+        <li class="media-tab-list__item"><a class="social-tab social-tab--linkedin" href="#!">Link to Linkedin</a></li>
       </ul>
   
     </div>
