--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="style.css">
   <title>Singolo</title>
 </head>
 
@@ -20,8 +20,8 @@
 
       <nav>
         <ul class="navbar header__navbar">
-          <li class="navbar__item navbar__item--active">
-            <a class="navbar__link" href="#!">Home</a>
+          <li class="navbar__item">
+            <a class="navbar__link navbar__link--active" href="#!">Home</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="#services">Services</a>
@@ -47,6 +47,7 @@
       <div class="wrapper">
 
         <div class="slider__wrapper">
+
           <button class="slider__button slider__button--left pixel-perfect"></button>
           <button class="slider__button slider__button--right"></button>
   
@@ -66,6 +67,7 @@
               </div>
             </li>
           </ul>
+
         </div>
 
       </div>
@@ -361,7 +363,7 @@
   <footer class="footer">
     <div class="wrapper footer__wrapper">
 
-      <p class="footer__copyright">© Copyright 2013 · by PSDchat.com</p>
+      <p class="footer__copyright">&copy; Copyright 2013 &middot; by PSDchat.com</p>
 
       <ul class="footer__socials socials-list">
         <li class="socials-list__item">
